# trino-mcp

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
resources/queries/: ftd-por-dia.toml
src/: constants.rs  lib.rs  main.rs  persistence.rs
src/conversion/: into_tool.rs  mod.rs  try_into_tool_route.rs
src/mcp_handlers/: mod.rs  trino_handler.rs
src/server/: server.rs
src/trino_client/: mod.rs  query_template.rs  trino_client.rs
